2009-03-05  Sancho Lerena  <slerena@artica.es>

	*  include/functions_reporting.php: Fixed notice.

2009-03-05  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/auth/ldap.php: Fixed a small issue to check on a variable
	
	* include/functions_extensions.php: Fixed an issue since errors 
	produced with @function will filter into custom error handlers
	
	* include/functions_ui.php: Added RSS link in the header to display
	RSS feed availability in RSS-enabled browsers
	
	* operation/events/events_marquee.php, 
	operation/events/events_statistics.php: require_once so it won't load
	the same function files twice
	
	* operation/events/events_rss.php: Better error handling. Require_once
	required because it was giving a problem with certain function files.	

2009-03-05  Esteban Sanchez  <estebans@artica.es>

	* include/functions_config.php: Fixed auth files inclusion that may
	fail in some cases.

2009-03-05  Esteban Sanchez  <estebans@artica.es>
	
	* godmode/reporting/map_builder_wizard.php: Style correction. Use
	Pandora functions instead of SQL. Force elements to have an image by
	removing "None".

	* include/functions_config.php: Added to repository. New file to
	manage config operations such as creation and updating values or
	updating the whole config array. It even sets id_user so no more usage
	of $_SESSION is required from outside.

	* include/config_process.php: Cleanup and usage of functions in
	functions_config.php. Updated build.

	* index.php: Updated to changes in config_process.php,

	* godmode/setup/setup.php: All config process has been moved to
	config_process.php which uses functions in functions_config.php.

	* include/styles/pandora.css: Styling for pre elements. New help
	class.

2009-03-04  Sancho Lerena <slerena@artica.es>

	* operation/agents/tactical.php: Layout adapted to bigger event table.

	* extras/: New directory with extra contents (scripts, tools, samples)
	
	* index.php: Add new permission check for /attachment directory. Probably